# recursion-app

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
benches/: bench_main.rs
recursion-lib/: Cargo.toml
recursion-lib/src/: expo.rs  int_to_bin.rs  lcd.rs  lib.rs
src/: main.rs
